--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><a href="https://github.com/AdetomiOlamide/pdf-qr/blob/main/Brochure%20Design%202023.pdf"/>Click Here Event Info</a></p>
+  <p><a href="Brochure%20Design%202023.pdf"/>Click Here Event Info</a></p>
 </html>
